--- a/style.css
+++ b/style.css
@@ -2,24 +2,48 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    font-weight: bolder;
 }
 
 .banner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(background.JPG);
     background-size: cover;
     background-position: center;
 
 }
 
+html, body {
+    width: 100%;
+    height:100%;
+  }
+  
+  body {
+      background: linear-gradient(-45deg, #ee7752, #621de2, #1069ee, #23d5ab);
+      background-size: 400% 400%;
+      animation: gradient 15s ease infinite;
+  }
+  
+  @keyframes gradient {
+      0% {
+          background-position: 0% 50%;
+      }
+      50% {
+          background-position: 100% 50%;
+      }
+      100% {
+          background-position: 0% 50%;
+      }
+  }
+
 .navbar{
-    width: 85%;
+    width: auto;
     margin: auto;
     padding: 35px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: rgba(0, 0, 0, 0.301);
 }
 
 .logo{
@@ -36,7 +60,7 @@
 
 .navbar ul li a{
     text-decoration: none;
-    color: #2e819d;
+    color: #ffffff;
     text-transform: uppercase;
 }
 
@@ -44,7 +68,7 @@
     content:'';
     height: 3px;
     width: 0;
-    background: #550096;
+    background: #9000ff;
     position: absolute;
     left: 0;
     bottom: -10px;
@@ -92,7 +116,7 @@ button{
 }
 
 span{
-    background: #2e819d;
+    background: #db8009;
     height: 100%;
     width: 0;
     border-radius: 25px;
@@ -110,3 +134,90 @@ button:hover span{
 button:hover{
     border: none;
 }
+
+.email:hover:before{
+    content: "info@fil.org";
+}
+
+.phone:hover:before{
+    content: "337-232-8086";
+}
+
+.email:before{
+    content: "Email";
+}
+
+.phone:before{
+    content: "Phone #";
+}
+
+.first span{
+    background: #dacb07;
+    height: 100%;
+    width: 0;
+    border-radius: 25px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+    transition: 0.5s;
+}
+
+.second span{
+    background: #727272;
+    height: 100%;
+    width: 0;
+    border-radius: 25px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+    transition: 0.5s;
+}
+
+.third span{
+    background: #d46012;
+    height: 100%;
+    width: 0;
+    border-radius: 25px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+    transition: 0.5s;
+}
+
+body {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
+  }
+
+  .progress {
+    background: rgba(255,255,255,0.1);
+    justify-content: flex-start;
+    border-radius: 100px;
+    align-items: center;
+    position: center;
+    padding: 0 5px;
+    display: flex;
+    height: 40px;
+    width: 500px;
+  }
+  
+  .progress-value {
+    animation: load 3s normal forwards;
+    box-shadow: 0 10px 40px -10px #fff;
+    border-radius: 100px;
+    background: #fff;
+    height: 30px;
+    width: 0;
+  }
+  
+  @keyframes load {
+    0% { width: 0; }
+    100% { width: 68%; }
+  }
