--- a/cartstyle.css
+++ b/cartstyle.css
@@ -73,9 +73,9 @@ html, body {
     padding: 0 1.5em;
 }
 .section-header {
-    font-family: "Metal Mania";
-    font-weight: normal;
-    color: #333;
+    font-family: sans-serif;
+    font-weight: bolder;
+    color: #eee;
     text-align: center;
     font-size: 2.5em;
 }
@@ -363,7 +363,7 @@ html, body {
 }
 
 .logo{
-    width: 120px;
+    width: 75px;
     cursor: pointer;
 }
 
