--- a/style.css
+++ b/style.css
@@ -46,8 +46,20 @@ html, body {
     background-color: rgba(0, 0, 0, 0.301);
 }
 
+.navbarfooter {
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    margin: auto;
+    padding: 35px 0;
+    display: flex;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.301);
+  }
+
 .logo{
-    width: 120px;
+    width: 75px;
     cursor: pointer;
 }
 
@@ -76,6 +88,34 @@ html, body {
 }
 
 .navbar ul li:hover::after{
+    width: 100%;
+}
+
+.navbarfooter a{
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+    position: relative;
+}
+
+.navbarfooter a{
+    text-decoration: none;
+    color: #ffffff;
+    text-transform: uppercase;
+}
+
+.navbarfooter a::after{
+    content:'';
+    height: 3px;
+    width: 0;
+    background: #9000ff;
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    transition: 0.5s;
+}
+
+.navbarfooter a:hover::after{
     width: 100%;
 }
 
@@ -135,24 +175,56 @@ button:hover{
     border: none;
 }
 
-.email:hover:before{
-    content: "info@fil.org";
+.infx:hover:before{
+    content: "c00305652@louisiana.edu";
 }
 
-.phone:hover:before{
-    content: "337-232-8086";
+.cmps:hover:before{
+    content: "c00200308@louisiana.edu";
 }
 
-.email:before{
-    content: "Email";
+.ms:hover:before{
+    content: "miket@louisiana.edu";
 }
 
-.phone:before{
-    content: "Phone #";
+.infx:before{
+    content: "INFX";
+}
+
+.cmps:before{
+    content: "CMPS";
+}
+
+.ms:before{
+    content: "MS";
+}
+
+.first:hover:before{
+    content: "David Goggins";
+}
+
+.second:hover:before{
+    content: "Jocko Willink";
+}
+
+.third:hover:before{
+    content: "Hugh Glass";
+}
+
+.first:before{
+    content: "First";
+}
+
+.second:before{
+    content: "Second";
+}
+
+.third:before{
+    content: "Third";
 }
 
 .first span{
-    background: #dacb07;
+    background: #aca106;
     height: 100%;
     width: 0;
     border-radius: 25px;
@@ -221,3 +293,140 @@ body {
     0% { width: 0; }
     100% { width: 68%; }
   }
+
+  .shop-item {
+    margin: 30px;
+}
+
+.shop-item-title {
+    /*display: block;*/
+    width: 100%;
+    /*text-align: center;*/
+    font-weight: bold;
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 15px;
+}
+
+.shop-item-image {
+    height: 250px;
+}
+
+.shop-item-details {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+}
+
+.shop-item-price {
+    flex-grow: 1;
+    color: #333;
+}
+
+.shop-items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.cart-header {
+    font-weight: bold;
+    font-size: 1.25em;
+    color: #333;
+}
+
+.cart-column {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid black;
+    margin-right: 1.5em;
+    padding-bottom: 10px;
+    margin-top: 10px;
+}
+
+.cart-row {
+    display: flex;
+}
+
+.cart-item {
+    width: 45%;
+}
+
+.cart-price {
+    width: 20%;
+    font-size: 1.2em;
+    color: #333;
+}
+
+.cart-quantity {
+    width: 35%;
+}
+
+.cart-item-title {
+    color: #333;
+    margin-left: .5em;
+    font-size: 1.2em;
+}
+
+.cart-item-image {
+    width: 75px;
+    height: auto;
+    border-radius: 10px;
+}
+
+.btn-danger {
+    color: white;
+    background-color: #EB5757;
+    border: none;
+    border-radius: .3em;
+    font-weight: bold;
+}
+
+.btn-danger:hover {
+    background-color: #CC4C4C;
+}
+
+.cart-quantity-input {
+    height: 34px;
+    width: 50px;
+    border-radius: 5px;
+    border: 1px solid #56CCF2;
+    background-color: #eee;
+    color: #333;
+    padding: 0;
+    text-align: center;
+    font-size: 1.2em;
+    margin-right: 25px;
+}
+
+.cart-row:last-child {
+    border-bottom: 1px solid black;
+}
+
+.cart-row:last-child .cart-column {
+    border: none;
+}
+
+.cart-total {
+    text-align: end;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+.cart-total-title {
+    font-weight: bold;
+    font-size: 1.5em;
+    color: black;
+    margin-right: 20px;
+}
+
+.cart-total-price {
+    color: #333;
+    font-size: 1.1em;
+}
+
+.btn-purchase {
+    display: block;
+    margin: 40px auto 80px auto;
+    font-size: 1.75em;
+}
