--- a/cartstyle.css
+++ b/cartstyle.css
@@ -4,6 +4,7 @@
     font-family: sans-serif;
     color: #eee;
     font-weight: bolder;
+    opacity: 1; /* Set opacity to 1 for all elements */
 }
 
 html, body {
@@ -134,6 +135,8 @@ html, body {
     vertical-align: middle;
     padding: .67em .67em;
     cursor: pointer;
+    background-color: #56CCF2; /* Set a background color for better visibility */
+
 }
 
 .btn-header {
