--- a/cartstyle.css
+++ b/cartstyle.css
@@ -7,6 +7,12 @@
     opacity: 1; /* Set opacity to 1 for all elements */
 }
 
+h1{
+    text-align: center;
+    font-weight: bolder;
+    font-family: sans-serif;
+}
+
 html, body {
     margin: 0;
     padding: 0;
